fixed profile image squashing

--- a/css/blog.css
+++ b/css/blog.css
@@ -23,6 +23,7 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
+  object-fit: cover;
   margin-bottom: 0.2rem;
 }
 
